--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <% if current_user %> <!-- change this to a helper method called logged_in? later -->
+      Welcome, <%= current_user.username %>!
+      <%= link_to "Logout", logout_path, method: :delete %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
