Idea can display all related images

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -7,3 +7,4 @@
     <%= image.image_url %>
   <% end %>
 <% end %><br>
+<%= link_to "Add Image to an Idea", new_user_ideas_image_path(current_user) %>
