--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,17 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'bootstrap', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <%= javascript_include_tag 'bootstrap.min', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'npm', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <% if current_user %> <!-- change this to a helper method called logged_in? later -->
-      Welcome, <%= current_user.username %>!
-      <%= link_to "Logout", logout_path, method: :delete %>
-    <% end %><br>
-    <%= yield %>
+    <%= render partial: "layouts/navbar" %>
+      <div class="container">
+        <%= yield %>
+      </div>
   </body>
 </html>
